Fix some display issues on mobile

--- a/app/assets/stylesheets/track.scss
+++ b/app/assets/stylesheets/track.scss
@@ -16,8 +16,9 @@
   }
 
   @media screen and (max-width: 768px) {
-    width: 92%;
+    width: 93%;
     height: 50px;
+    margin-left: 2px;
   }
 }
 
